--- a/SCME.UI/PagesTech/TechnicianPage.xaml
+++ b/SCME.UI/PagesTech/TechnicianPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:my="clr-namespace:SCME.UI"
       xmlns:res="clr-namespace:SCME.UI.Properties"
-      mc:Ignorable="d"
+      mc:Ignorable="d" Loaded="TechnicianPage_OnLoaded"
       d:DesignWidth="1280" d:DesignHeight="924"
       Name="technicianPage" Title="{x:Static res:Resources.Technitian}">
 
