Добавил страницу с редактированием привязок профилей и кип, кэширование не готово.

--- a/FastTest/App.xaml
+++ b/FastTest/App.xaml
@@ -4,5 +4,6 @@
              xmlns:local="clr-namespace:FastTest"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <ResourceDictionary Source="pack://application:,,,/SCME.WpfControlLibrary;component/Styles/Controls.xaml"/>
     </Application.Resources>
 </Application>
