--- a/SCME.ProfileBuilder/CustomControls/ConnectPage/ConnectToSQLite.xaml
+++ b/SCME.ProfileBuilder/CustomControls/ConnectPage/ConnectToSQLite.xaml
@@ -9,7 +9,8 @@
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              xmlns:res="clr-namespace:SCME.ProfileBuilder.Properties"
              xmlns:res1="clr-namespace:SCME.WpfControlLibrary.Properties;assembly=SCME.WpfControlLibrary"
-             d:DesignHeight="450" d:DesignWidth="800">
+             xmlns:connectPage="clr-namespace:SCME.ProfileBuilder.ViewModels.ConnectPage"
+             d:DesignHeight="450" d:DesignWidth="800" d:DataContext="{d:DesignInstance connectPage:ConnectToSQLiteVM }">
     <Grid >
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"></RowDefinition>
@@ -17,12 +18,8 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="7*"></ColumnDefinition>
-            <ColumnDefinition  Width="3*"></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <TextBlock Text="{x:Static res:Resources.ProfileBuilderTitle}" />
-        <Grid Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2">
+        <TextBlock Grid.Column="0" Grid.Row="0" Text="{x:Static res:Resources.ProfileBuilderTitle}" />
+        <Grid Grid.Column="0" Grid.Row="1" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="auto"/>
@@ -33,7 +30,10 @@
                 <iconPacks:PackIconMaterial   Kind="Magnify" />
             </Button>
         </Grid>
-        <Button  Grid.Column="1" Grid.Row="2" Content="{x:Static res1:Resources.EditProfiles}" IsEnabled="{Binding ConnectedButtonEnabled}"  Click="ConnetToSQLiteEditProfiles_Click" />
-        <Button  Grid.Column="1" Grid.Row="3" Content="{x:Static res1:Resources.EditProfileBindings}" IsEnabled="{Binding ConnectedButtonEnabled}"  Click="ConnetToSQLiteEditProfileBindings_Click" />
+        <StackPanel Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right">
+            <Button  Content="{x:Static res1:Resources.EditProfiles}" IsEnabled="{Binding ConnectedButtonEnabled}" Style="{StaticResource PrimaryButton}" Click="ConnetToSQLiteEditProfiles_Click" />
+            <Button   Content="{x:Static res1:Resources.EditProfileBindings}" IsEnabled="{Binding ConnectedButtonEnabled}" Style="{StaticResource PrimaryButton}" Click="ConnetToSQLiteEditProfileBindings_Click" />    
+        </StackPanel>
+        
     </Grid>
 </UserControl>
