--- a/SCME.ProfileBuilder/Pages/MatchingProfilesCodesPage.xaml
+++ b/SCME.ProfileBuilder/Pages/MatchingProfilesCodesPage.xaml
@@ -18,8 +18,7 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0" Grid.Row="0">
             <Grid.RowDefinitions>
@@ -53,12 +52,15 @@
             </Grid.RowDefinitions>
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <TextBox/>
+                <Button Grid.Column="0" Grid.Row="0" Command="{Binding DeleteAllMmeCodesToProfile}" Style="{StaticResource ButtonWithIcon}">
+                    <iconPacks:PackIconMaterial Kind="Delete" />
+                </Button>
                 <Button Grid.Column="1" Grid.Row="0" Command="{Binding EditMmeCodesToProfile}" Style="{StaticResource ButtonWithIcon}">
                     <iconPacks:PackIconMaterial Kind="Pencil" />
                 </Button>
