--- a/SCME.WpfControlLibrary/Styles/Common.xaml
+++ b/SCME.WpfControlLibrary/Styles/Common.xaml
@@ -4,6 +4,7 @@
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml" />
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Colors.xaml" />
+        <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Fonts.xaml" />
     </ResourceDictionary.MergedDictionaries>
     
     
