--- a/SCME.WpfControlLibrary/Styles/TextBox.xaml
+++ b/SCME.WpfControlLibrary/Styles/TextBox.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls">
     <Style TargetType="TextBox" >
+        <Setter Property="FontFamily" Value="{DynamicResource SCME.DefaultFont}"></Setter>
         <Setter Property="FontSize" Value="{DynamicResource SCME.BaseFontSize}" />
         <Setter Property="Background" Value="Transparent"></Setter>
     </Style>
